# hyperfridge-r0

./: .codecov.yml  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile copy  Dockerfile2  DockerfileLinux  DockerfileMacOS  DockerfileMacOs  DockerfileMacOs2  README.md  README2.md  buildPublish.sh  cratePublish.sh  rust-toolchain.toml
.github/workflows/: checks.yml  docker-build-macos.yml  docker-build-matrix.yml  docker-build-matrix_test.yml  docker-build.yml  docker-guest.yml
data/: bank.pem  bank_public.pem  checkResponse.sh  client.pem  client_public.pem  createResponse.sh  createTestResponse.sh  deploy_new_testdata.sh  er3-created.xml  er3-created.xml-DigestInfo-value  er3-created.xml-OrderData-value  er3-created.xml-SignatureValue  er3-created.xml-SignatureValue-value  er3-created.xml-SignedInfo  er3-created.xml-TransactionKey  er3-created.xml-authenticated  er3.xml-orig-OrderData-value  er3.xml-orig-SignatureValue  er3.xml-orig-SignedInfo  er3.xml-orig-created  er3.xml-orig-created-SignedInfo  er3.xml-orig-created-authenticated  export_primes.sh  extract_pems_from_p12.sh  hyperfridge cycles.html  private_key.pem  producive_example_pretty.xml  producive_example_prettyH004.xml  productive_bank_x002.pem  productive_example-generated.xml  pub_bank.pem  pub_client.pem  pub_witness.pem  response_template-generated.xml  response_template.xml  response_template_pretty.xml  watchdog.sh  witness-nopwd.pem  witness-pub.pem  witness.pem
data/productive_example/: productive_example.xml-OrderData  productive_example.xml-SignatureValue-value  productive_example.xml-TransactionKey  productive_example.xml-authenticated
data/productive_example-generated/: productive_example-generated-pretty.xml  productive_example-generated.xml  productive_example-generated.xml-DigestInfo-value  productive_example-generated.xml-OrderData  productive_example-generated.xml-OrderData-value  productive_example-generated.xml-SignatureValue  productive_example-generated.xml-SignatureValue-value  productive_example-generated.xml-SignedInfo  productive_example-generated.xml-TransactionKey  productive_example-generated.xml-authenticated  test-pretty.xml  test.xml  test.xml-DigestInfo-value  test.xml-OrderData  test.xml-OrderData-value  test.xml-SignatureValue  test.xml-SignatureValue-value  test.xml-SignedInfo  test.xml-TransactionKey  test.xml-authenticated  test.xml-decrypted_tx_key.binary
data/response_template/: response_template.xml-DigestInfo-value  response_template.xml-authenticated
data/response_template-generated/: response_template-generated-pretty.xml  response_template-generated.xml  response_template-generated.xml-DigestInfo-value  response_template-generated.xml-OrderData  response_template-generated.xml-OrderData-value  response_template-generated.xml-SignatureValue  response_template-generated.xml-SignatureValue-value  response_template-generated.xml-SignedInfo  response_template-generated.xml-TransactionKey  response_template-generated.xml-TransactionKeyDecrypt  response_template-generated.xml-TransactionKeyDecrypt.hex  response_template-generated.xml-Witness.hex  response_template-generated.xml-authenticated  response_template-generated.xml-decrypted_tx_key.binary
data/response_template-generated/camt53/: 35e75effeaa74f579f97c8121bfa68ad_8307Camt053_2023112922562645_0.xml  35e75effeaa74f579f97c8121bfa68ae_8307Camt053_2023113022562645_0.xml  cf89170b3de1470e854cc270b572ad93_8307Camt053_2023112922562929_0.xml
data/schematas/: example_pretty_H004.xml  example_pretty_H005.xml
data/schematas/H003/: ebics_orders.xsd
data/schematas/H004/: ebics_orders_H004.xsd
data/schematas/H005/: ebics_orders_H005.xsd
data/test/: TEST.md  productive_example-generated.xml  test-pretty.xml  test.xml  test.xml-DataDigest  test.xml-DigestInfo-value  test.xml-OrderData  test.xml-OrderData-value  test.xml-Receipt  test.xml-Receipt-6bb958072180ccc56d839bb0931c58552dc2ae4d30e44937a09d3489e839edfb-latest.json  test.xml-Receipt-test.json  test.xml-SignatureValue  test.xml-SignatureValue-value  test.xml-SignedInfo  test.xml-TransactionKey  test.xml-TransactionKeyDecrypt.hex  test.xml-Witness.hex  test.xml-authenticated  test.xml-decrypted_tx_key.binary  test.xml-generated.xml  test.xml-value
data/test/camt53/: 35e75effeaa74f579f97c8121bfa68ad_8307Camt053_2023112922562645_0.xml  cf89170b3de1470e854cc270b572ad93_8307Camt053_2023112922562929_0.xml
docs/: INSTRUCTIONS.md  benchmarks.md  crypto.md  guest-hyperfridge.md  host.md  hyperfridge-cycles.html  links.json  macos.md  milestones.md  runtime.md  transaction-proof.md  verifier-cli.md
host/: Cargo.toml  README.md  bank.pem  create_test_data.md  witness.pem
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs  test_xmlparse.rs
verifier/: Cargo.toml
verifier/src/: main.rs
