[workspace]
resolver = "2"
members = ["host", "methods", "verifier"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

[workspace.dependencies]
risc0-zkvm = { version = "0.20.1" }
risc0-build = { version = "0.20.1" }
# methods/guest/cargo.toml needs manual update of r0 version