[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
# from template
methods = { path = "../methods" }
risc0-zkvm = { version = "0.19.1" }
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
num-bigint = "0.4"

# own dependecies
xmlparser = "0.*"
rsa = { version="0.9", features = ["pem"]}
pkcs1 = "0.7.5"
chrono = "0.4"
pem = "3"
serde_json = "1.0"
anyhow = "1.0"
clap = { version="4", features = ["derive", "string"] }
clap-markdown = "0.1"

[features]
#cuda = ["risc0-zkvm/cuda"]
#default = []
#metal = ["risc0-zkvm/metal"]

[dependencies.sha2]
git = "https://github.com/risc0/RustCrypto-hashes"
tag = "sha2-v0.10.6-risczero.0"

