[package]
name = "fridge-r0-client"
version = "0.0.32"
edition = "2021"
license = "MIT"
authors = ["Walter Strametz <walter.strametz@element36.io>"]
description = "Hyperfridge - a client for a proofing system for EBICS/ISO20022 (banking backend) access."

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
# from template
methods = { path = "../methods",version = "*"  }
# Define the risc0-zkvm crate with features for testing only
#risc0-zkvm = { version = "0.19.1", features = ["profiler", "prove", "getrandom" ] }
risc0-zkvm = { workspace = true, features = [ "prove", "getrandom"] }


env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
num-bigint = "0.4"

# own dependecies
xmlparser = "0.*"
rsa = { version="0.9", features = ["pem"]}
pkcs1 = "0.7.5"
chrono = "0.4"
pem = "3"
serde_json = "1.0"
anyhow = "1.0"
clap = { version="4", features = ["derive", "string"] }
clap-markdown = "0.1"

[features]
#cuda = ["risc0-zkvm/cuda"]
#default = []
#metal = ["risc0-zkvm/metal"]

[dependencies.sha2]
version = "0.11.0-pre.3"  # Dummy version
git = "https://github.com/risc0/RustCrypto-hashes"
tag = "sha2-v0.10.6-risczero.0"

