[package]
name = "methods"
version = "0.0.32"
edition = "2021"
license = "MIT"
authors = ["Walter Strametz <walter.strametz@element36.io>"]
description = "Proofing system for EBICS/ISO20022 (banking backend) access."

[build-dependencies]
risc0-build = { workspace = true }

[package.metadata.risc0]
methods = ["guest"]

[dependencies.sha2]
version = "0.10.6"  # Dummy version
git = "https://github.com/risc0/RustCrypto-hashes"
tag = "sha2-v0.10.6-risczero.0"
