[package]
name = "verifier"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Walter Strametz <walter.strametz@element36.io>"]
description = "Proofing system for EBICS/ISO20022 (banking backend) access."


[dependencies]
risc0-zkvm = { workspace = true }
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version="4", features = ["derive"] }
clap-markdown = "0.1"
